[package]
name = "bevy_dice"
version = "0.3.1"
authors = ["Sergei Surovtsev <ssurovsev@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Physics-based dice rolls for bevy"
keywords = ["bevy", "tabletop", "dice"]
repository = "https://github.com/stillonearth/bevy_rl"

[dependencies]
rand = "0.8.5"
bevy_rapier3d = { version = "0.21.0", features = [
    "simd-stable",
    "debug-render",
] }
nalgebra = "0.32.2"


[dependencies.bevy]
default-features = false
version = "0.10.1"
features = [
    "animation",
    "bevy_asset",
    "bevy_scene",
    "bevy_winit",
    "bevy_core_pipeline",
    "bevy_pbr",
    "bevy_gltf",
    "bevy_render",
    "bevy_sprite",
    "bevy_text",
    "bevy_ui",
    "png",
    "hdr",
    "zstd",
    "x11",
    "ktx2",
    "filesystem_watcher",
    "tonemapping_luts",
]

[dev-dependencies.bevy_kira_audio]
version = "0.15.0"
default-features = false
features = ["wav"]

[dev-dependencies]
bevy-inspector-egui = { version = "0.18" }
bevy-debug-text-overlay = "5.1"

[profile.dev]
opt-level = 3
